# prd-code-verifier

./: .gitignore  LICENSE  README.md  action.yml  ai_providers.py  config.py  cr_config.py  cr_runner.py  env.cr.example  env.example  example_project.json  main.py  models.py  project.md  pyproject.toml  run-pipeline.sh  sample_enhanced_report.md  start.sh  verification_engine.py  web_app.py
.cursor/rules/: project-description.mdc
.github/workflows/: self-test.yml
examples/: prd-verification.json  publishing-options-example.yml  user-workflow-example.yml
reports/: cr_summary.json
reports/PRD Code Verifier Self-Test/AI Provider Integration Verification/: gemini_gemini-2.5-flash_report.md
reports/PRD Code Verifier Self-Test/GitHub Action Verification/: gemini_gemini-2.5-flash_report.md
reports/PRD Code Verifier Self-Test/Project Structure Verification/: gemini_gemini-2.5-flash_report.md
reports/PRD Code Verifier Self-Test/Web Application Verification/: gemini_gemini-2.5-flash_report.md
templates/: index.html
tests/: env-substitution-examples.md  repository-url-explanation.md  self-test-project.json  test.env
utils/: env_substitution.py  git_operations.py  output_publisher.py
